tests/baselines/reference/typeGuardOfFormTypeOfOther.types
=== tests/cases/conformance/expressions/typeGuards/typeGuardOfFormTypeOfOther.ts ===
class C { private p: string };
>C : C
>p : string
>类型别名 :=> 文字

var str: string;
>str : string
>类型别名 :=> 文字

var bool: boolean;
>bool : boolean
>类型别名 :=> 真假

var num: number;
>num : number
>类型别名 :=> 数字

var strOrNum: string | number;
>strOrNum : string | number

var strOrBool: string | boolean;
>strOrBool : string | boolean

var numOrBool: number | boolean
>numOrBool : number | boolean

var strOrNumOrBool: string | number | boolean;
>strOrNumOrBool : string | number | boolean

var strOrC: string | C;
>strOrC : string | C
>C : C

var numOrC: number | C;
>numOrC : number | C
>C : C

var boolOrC: boolean | C;
>boolOrC : boolean | C
>C : C

var emptyObj: {};
>emptyObj : {}

var c: C;
>c : C
>C : C

// A type guard of the form typeof x === s, 
// where s is a string literal with any value but 'string', 'number' or 'boolean',
//  - when true, removes the primitive types string, number, and boolean from the type of x, or
//  - when false, has no effect on the type of x.

if (typeof strOrC === "Object") {
>typeof strOrC === "Object" : boolean
>类型别名 :=> 真假
>typeof strOrC : "string" | "number" | "boolean" | "symbol" | "undefined" | "object" | "function" | "文字" | "数字" | "真假" | "符号" | "未定" | "对象" | "函数"
>strOrC : string | C
>"Object" : "Object"

    c = strOrC; // C
>c = strOrC : C
>c : C
>strOrC : C
}
else {
    var r2: string = strOrC; // string
>r2 : string
>类型别名 :=> 文字
>strOrC : string
>类型别名 :=> 文字
}
if (typeof numOrC === "Object") {
>typeof numOrC === "Object" : boolean
>类型别名 :=> 真假
>typeof numOrC : "string" | "number" | "boolean" | "symbol" | "undefined" | "object" | "function" | "文字" | "数字" | "真假" | "符号" | "未定" | "对象" | "函数"
>numOrC : number | C
>"Object" : "Object"

    c = numOrC; // C
>c = numOrC : C
>c : C
>numOrC : C
}
else {
    var r3: number  = numOrC; // number
>r3 : number
>类型别名 :=> 数字
>numOrC : number
>类型别名 :=> 数字
}
if (typeof boolOrC === "Object") {
>typeof boolOrC === "Object" : boolean
>类型别名 :=> 真假
>typeof boolOrC : "string" | "number" | "boolean" | "symbol" | "undefined" | "object" | "function" | "文字" | "数字" | "真假" | "符号" | "未定" | "对象" | "函数"
>boolOrC : boolean | C
>"Object" : "Object"

    c = boolOrC; // C
>c = boolOrC : C
>c : C
>boolOrC : C
}
else {
    var r4: boolean = boolOrC; // boolean
>r4 : boolean
>类型别名 :=> 真假
>boolOrC : boolean
>类型别名 :=> 真假
}
if (typeof strOrC === "Object" as string) { // comparison is OK with cast
>typeof strOrC === "Object" as string : boolean
>类型别名 :=> 真假
>typeof strOrC : "string" | "number" | "boolean" | "symbol" | "undefined" | "object" | "function" | "文字" | "数字" | "真假" | "符号" | "未定" | "对象" | "函数"
>strOrC : string | C
>"Object" as string : string
>类型别名 :=> 文字
>"Object" : "Object"

    c = strOrC; // error: but no narrowing to C
>c = strOrC : string | C
>c : C
>strOrC : string | C
}
else {
    var r5: string = strOrC; // error: no narrowing to string
>r5 : string
>类型别名 :=> 文字
>strOrC : string | C
}

if (typeof strOrNumOrBool === "Object") {
>typeof strOrNumOrBool === "Object" : boolean
>类型别名 :=> 真假
>typeof strOrNumOrBool : "string" | "number" | "boolean" | "symbol" | "undefined" | "object" | "function" | "文字" | "数字" | "真假" | "符号" | "未定" | "对象" | "函数"
>strOrNumOrBool : string | number | boolean
>"Object" : "Object"

    let q1: {} = strOrNumOrBool; // {}
>q1 : {}
>strOrNumOrBool : never
>类型别名 :=> 不及
}
else {
    let q2: string | number | boolean = strOrNumOrBool; // string | number | boolean
>q2 : string | number | boolean
>strOrNumOrBool : string | number | boolean
}

// A type guard of the form typeof x !== s, where s is a string literal,
//  - when true, narrows the type of x by typeof x === s when false, or
//  - when false, narrows the type of x by typeof x === s when true.
if (typeof strOrC !== "Object") {
>typeof strOrC !== "Object" : boolean
>类型别名 :=> 真假
>typeof strOrC : "string" | "number" | "boolean" | "symbol" | "undefined" | "object" | "function" | "文字" | "数字" | "真假" | "符号" | "未定" | "对象" | "函数"
>strOrC : string | C
>"Object" : "Object"

    var r2: string = strOrC; // string
>r2 : string
>类型别名 :=> 文字
>strOrC : string
>类型别名 :=> 文字
}
else {
    c = strOrC; // C
>c = strOrC : C
>c : C
>strOrC : C
}
if (typeof numOrC !== "Object") {
>typeof numOrC !== "Object" : boolean
>类型别名 :=> 真假
>typeof numOrC : "string" | "number" | "boolean" | "symbol" | "undefined" | "object" | "function" | "文字" | "数字" | "真假" | "符号" | "未定" | "对象" | "函数"
>numOrC : number | C
>"Object" : "Object"

    var r3: number = numOrC; // number
>r3 : number
>类型别名 :=> 数字
>numOrC : number
>类型别名 :=> 数字
}
else {
    c = numOrC; // C
>c = numOrC : C
>c : C
>numOrC : C
}
if (typeof boolOrC !== "Object") {
>typeof boolOrC !== "Object" : boolean
>类型别名 :=> 真假
>typeof boolOrC : "string" | "number" | "boolean" | "symbol" | "undefined" | "object" | "function" | "文字" | "数字" | "真假" | "符号" | "未定" | "对象" | "函数"
>boolOrC : boolean | C
>"Object" : "Object"

    var r4: boolean = boolOrC; // boolean
>r4 : boolean
>类型别名 :=> 真假
>boolOrC : boolean
>类型别名 :=> 真假
}
else {
    c = boolOrC; // C
>c = boolOrC : C
>c : C
>boolOrC : C
}

if (typeof strOrNumOrBool !== "Object") {
>typeof strOrNumOrBool !== "Object" : boolean
>类型别名 :=> 真假
>typeof strOrNumOrBool : "string" | "number" | "boolean" | "symbol" | "undefined" | "object" | "function" | "文字" | "数字" | "真假" | "符号" | "未定" | "对象" | "函数"
>strOrNumOrBool : string | number | boolean
>"Object" : "Object"

    let q1: string | number | boolean = strOrNumOrBool; // string | number | boolean
>q1 : string | number | boolean
>strOrNumOrBool : string | number | boolean
}
else {
    let q2: {} = strOrNumOrBool; // {}
>q2 : {}
>strOrNumOrBool : never
>类型别名 :=> 不及
}

